# BFID-mapping

./: .gitignore  PREVIEW_STATUS.md  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy-preview.yml  pages.yml  validate.yml
public/: sw.js
src/: App.svelte  app.css  main.ts  map-overrides.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: backup.ts  db.ts  demo.ts  installReferenceOverlays.ts  types.ts
src/lib/components/: MapView.svelte
