[package]
name = "bfid-mapping"
version = "0.1.0"
description = "Local-first BFID field mapping"
authors = ["BFID Mapping contributors"]
edition = "2021"

[lib]
name = "bfid_mapping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
